Edit: fix bug text overflow screen

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -1,117 +1,118 @@
 .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	min-height: 100vh;
+	padding: 0 0.5rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .main {
-  padding: 4rem 0 1rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	padding: 4rem 0 1rem 0;
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .title {
-  margin: 0;
-  padding-bottom: 4rem;
-  line-height: 1.15;
-  font-size: 3.5rem;
-  text-align: center;
+	margin: 0;
+	padding-bottom: 4rem;
+	line-height: 1.15;
+	font-size: 3.5rem;
+	text-align: center;
 }
 
 .title span {
-  color: #15202b;
-  -webkit-text-stroke: 1.5px #1da1f2;
+	color: #15202b;
+	-webkit-text-stroke: 1.5px #1da1f2;
 }
 
 .button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 3rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-top: 3rem;
 }
 
 .projects__link {
-  font-weight: 500;
-  margin: 0;
-  padding: 1rem;
-  border-radius: 10px;
-  border: 1px solid #38444d;
-  background-color: #12151d;
+	font-weight: 500;
+	margin: 0;
+	padding: 1rem;
+	border-radius: 10px;
+	border: 1px solid #38444d;
+	background-color: #12151d;
 }
 
 .projects__link:hover,
 .projects__link:focus,
 .projects__link:active {
-  border-color: #1da1f2;
+	border-color: #1da1f2;
 }
 
 .footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 5rem;
-  width: 100%;
-  border-top: 1px solid #38444d;
-  padding: 1.5rem 0 2rem 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-top: 5rem;
+	width: 100%;
+	border-top: 1px solid #38444d;
+	padding: 1.5rem 0 2rem 0;
 }
 
 .footer__element {
-  width: 40%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  line-height: 1.5;
+	width: 40%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	line-height: 1.5;
 }
 
 .footer__element a {
-  color: #1da1f2;
+	color: #1da1f2;
 }
 
 .footer__element a:hover {
-  text-decoration: underline;
+	text-decoration: underline;
 }
 
 .footer__element p {
-  font-weight: 500;
-  margin: 0.5rem 0;
+	font-weight: 500;
+	margin: 0.5rem 0;
 }
 
 /* layout for fetching data */
 
 .fetch__data {
-  font-size: 2rem;
+	font-size: 2rem;
 }
 
 @media (max-width: 600px) {
-  .main {
-    padding: 4rem 0 0 0;
-  }
+	.main {
+		padding: 4rem 0 0 0;
+	}
 
-  .title {
-    padding-bottom: 2rem;
-    line-height: 1.25;
-  }
+	.title {
+		padding-bottom: 2rem;
+		line-height: 1.25;
+	}
 
-  .footer {
-    flex-direction: column;
-    padding: 1rem 0 1.5rem 0;
-  }
+	.footer {
+		flex-direction: column;
+		padding: 1rem 0 1.5rem 0;
+		margin-top: 0;
+	}
 
-  .footer__element {
-    width: 95%;
-  }
+	.footer__element {
+		width: 95%;
+	}
 
-  .footer__element p {
-    text-align: center;
-    font-size: 0.85rem;
-    line-height: 1.6;
-  }
+	.footer__element p {
+		text-align: center;
+		font-size: 0.85rem;
+		line-height: 1.6;
+	}
 }
