--- a/styles/Slug.module.css
+++ b/styles/Slug.module.css
@@ -128,6 +128,7 @@
 @media (max-width: 600px) {
 	.container {
 		margin: 0 1rem;
+		max-width: 90vw;
 	}
 
 	.content {
@@ -139,5 +140,39 @@
 		display: inline-block;
 		margin: 1rem 0.3rem 0 0.3rem;
 		font-size: 0.85rem;
+	}
+
+	.details {
+		/* These are technically the same, but use both */
+		overflow-wrap: break-word;
+		word-wrap: break-word;
+		/* Use this non-standard one: */
+		word-break: break-word;
+
+		/* Adds a hyphen where the word breaks, if supported (No Blink) */
+		-ms-hyphens: auto;
+		-moz-hyphens: auto;
+		-webkit-hyphens: auto;
+		hyphens: auto;
+	}
+
+	.details h5 {
+		margin-bottom: 0;
+	}
+
+	.details ul {
+		padding-left: 1.5rem;
+	}
+
+	.details ol > li > p {
+		margin: 1rem 0;
+	}
+
+	.details ul > li > p {
+		margin: 0;
+	}
+
+	.details b {
+		font-size: 1.25rem;
 	}
 }
